--- a/about.yml
+++ b/about.yml
@@ -4,8 +4,8 @@ job: QA Engineer
 level: junior
 email: katia.katkova-97@yandex.ru
 description: |
-  Я 4,5 года была художницей, и теперь я хочу научиться чему-то новому.
-  Диплом магистра по направлению "Теплоэнергетика и теплотехника"
+  Я 4,5 года была художницей, и теперь я хочу научиться чему-то новому
+  Есть диплом магистра по направлению "Теплоэнергетика и теплотехника"
 skills: 
   - Функциональное тестирование
   - Написание багрепортов
