--- a/requirements.yml
+++ b/requirements.yml
@@ -15,3 +15,4 @@ implicit:
   - Цены на товары должны указываться в местной валюте
   - Пользователь должен пройти регистрацию, чтобы оформить заказ
   - При удалении товара из корзины должно появляться окно подтверждения
+  - На первой странице с товарами не должно быть кнопки "предыдущая страница"
