--- a/test-cases.yml
+++ b/test-cases.yml
@@ -7,12 +7,12 @@
   test-data: |
     empty
   steps:
-    - Выбираем категорию laptops
+    - Выбрать категорию laptops
   expected-result: |
-    На странице должны отобразиться только ноутбуки 
+    На странице отображаются только ноутбуки 
 
 - summary: |
-    Проверка возможности поиска товары по ключевому слову
+    Проверка возможности поиска товара по ключевому слову
   requirement: |
     При поиске по ключевому слову на странице должны отобразиться только подходящие товары 
   prerequisites:
@@ -20,9 +20,9 @@
   test-data: |
     empty
   steps:
-    - Пишем ключевое слово iphone
+    - Написать ключевое слово iphone
   expected-result: |
-    На странице должны отобразиться только телефоны iphone
+    На странице отображаются только телефоны iphone
 
 - summary: |
     Проверка возможности просматра товара и подробной информации о товаре
@@ -33,22 +33,22 @@
   test-data: |
     empty
   steps:
-    - Нажимаем на любой товар
+    - Нажать на любой товар
   expected-result: |
-    Должна открыться страница с товаром и подробным описанием
+    Открылась страница с товаром и подробным описанием
 
 - summary: |
     Проверка добавления товара в корзину и просмотра содержимого корзины
   requirement: |
-    При нажатии кнопки 2в корзину" товар добавляется в корзину
+    При нажатии кнопки "в корзину" товар добавляется в корзину
   prerequisites:
     Открыта страница магазина
   test-data: |
     empty
   steps:
-    - На любом товаре нажимаем кнопку "в корзину"
+    - На любом товаре нажать "в корзину"
   expected-result: |
-    Товар должен добавиться в корзину
+    Товар добавлен в корзину
     
 - summary: |
     Проверка просмотра содержимого корзины
@@ -59,6 +59,35 @@
   test-data: |
     empty
   steps:
-    - Нажимаем кнопку "корзина"
+    - Нажать "корзина"
   expected-result: |
-    Открывается страница корзины со всем содержимым
+    Открывалась корзина со всем содержимым
+
+- summary: |
+    Проверка возможности фильтра товаров
+  requirement: |
+    При нажатии кнопки "корзина" должна открываться корзина со всем содержимым
+  prerequisites:
+    Открыта страница магазина
+  test-data: |
+    empty
+  steps:
+    - Выбрать одного или нескольких производителей
+    - Выбирать цену от 500 до 10000
+  expected-result: |
+    На странице отображаются товары выбранных производителей и в выбранном диапазоне цены
+    
+- summary: |
+    Проверка доступности сайта на различных устройствах
+  requirement: |
+    Сайт должен открываться на различных устройствах
+  prerequisites:
+    Открыта страница магазина
+  test-data: |
+    empty
+  steps:
+    - Открыть сайт в браузере девайса
+    - Проскроллить вниз
+    - Зайти в корзину
+  expected-result: |
+    Сайт открывается в мобильной версии
