--- a/test-cases.yml
+++ b/test-cases.yml
@@ -47,21 +47,9 @@
     empty
   steps:
     - На любом товаре нажать "в корзину"
-  expected-result: |
-    Товар добавлен в корзину
-    
-- summary: |
-    Проверка просмотра содержимого корзины
-  requirement: |
-    При нажатии кнопки "корзина" должна открываться корзина со всем содержимым
-  prerequisites:
-    Открыта страница магазина
-  test-data: |
-    empty
-  steps:
     - Нажать "корзина"
   expected-result: |
-    Открывалась корзина со всем содержимым
+    Товар добавлен в корзину и отображается
 
 - summary: |
     Проверка возможности фильтра товаров
