--- a/test-cases.yml
+++ b/test-cases.yml
@@ -54,7 +54,7 @@
 - summary: |
     Проверка возможности фильтра товаров
   requirement: |
-    При нажатии кнопки "корзина" должна открываться корзина со всем содержимым
+    При фильтрации товаров отображаются только подходящие товары
   prerequisites:
     Открыта страница магазина
   test-data: |
