--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,5 +1,5 @@
 - summary: |
-    Проверка возможности поиска товаров по категории
+    Поиск товаров по категории
   requirement: |
     При выборе определенной категории на странице должны отобразиться только товары этой категории
   prerequisites:
@@ -12,7 +12,7 @@
     На странице отображаются только ноутбуки 
 
 - summary: |
-    Проверка возможности поиска товара по ключевому слову
+    Поиск товара по ключевому слову
   requirement: |
     При поиске по ключевому слову на странице должны отобразиться только подходящие товары 
   prerequisites:
@@ -25,7 +25,7 @@
     На странице отображаются только телефоны iphone
 
 - summary: |
-    Проверка возможности просматра товара и подробной информации о товаре
+    Просмотр товара и подробной информации о товаре
   requirement: |
     При нажатии на товар должна открываться страница товара с подробным описанием
   prerequisites:
@@ -38,7 +38,7 @@
     Открылась страница с товаром и подробным описанием
 
 - summary: |
-    Проверка добавления товара в корзину и просмотра содержимого корзины
+    Добавление товара в корзину и просмотр содержимого корзины
   requirement: |
     При нажатии кнопки "в корзину" товар добавляется в корзину
   prerequisites:
@@ -52,7 +52,7 @@
     Товар добавлен в корзину и отображается
 
 - summary: |
-    Проверка возможности фильтра товаров
+    Проверка фильтра по цене
   requirement: |
     При фильтрации товаров отображаются только подходящие товары
   prerequisites:
@@ -60,13 +60,12 @@
   test-data: |
     empty
   steps:
-    - Выбрать одного или нескольких производителей
-    - Выбирать цену от 500 до 10000
+    - Выбрать цену от 500 до 10000
   expected-result: |
-    На странице отображаются товары выбранных производителей и в выбранном диапазоне цены
+    Отображаются товары в выбранном диапазоне цены
     
 - summary: |
-    Проверка доступности сайта на различных устройствах
+    Доступность сайта на различных устройствах
   requirement: |
     Сайт должен открываться на различных устройствах
   prerequisites:
@@ -74,8 +73,8 @@
   test-data: |
     empty
   steps:
-    - Открыть сайт в браузере девайса
-    - Проскроллить вниз
-    - Зайти в корзину
+    - Открыть DevTools
+    - Открыть меню адаптивности
+    - Выбрать девайс
   expected-result: |
-    Сайт открывается в мобильной версии
+    Сайт открывается на различных устройствах
