--- a/test-cases.yml
+++ b/test-cases.yml
@@ -3,33 +3,59 @@
   requirement: |
     При выборе определенной категории на странице должны отобразиться только товары этой категории
   prerequisites:
-    Открыта страница магазина
+    Открыта главная страница магазина
   test-data: |
     empty
   steps:
-    - Выбрать категорию laptops
+    - Выбрать категорию, например laptops
   expected-result: |
-    На странице отображаются только ноутбуки 
+    На странице отображаются только товары этой категории
 
 - summary: |
     Поиск товара по ключевому слову
   requirement: |
     При поиске по ключевому слову на странице должны отобразиться только подходящие товары 
   prerequisites:
-    Открыта страница магазина
+    Открыта главная страница магазина
   test-data: |
     empty
   steps:
-    - Написать ключевое слово iphone
+    - Написать ключевое слово, например iphone
   expected-result: |
-    На странице отображаются только телефоны iphone
+    На странице отображаются только подходящие товары
+
+- summary: |
+    Проверка фильтра по цене
+  requirement: |
+    При фильтрации товаров отображаются только подходящие товары
+  prerequisites:
+    Открыта главная страница магазина
+  test-data: |
+    empty
+  steps:
+    - Выбрать цену от 500 до 10000
+  expected-result: |
+    Отображаются товары в выбранном диапазоне цены
+
+- summary: |
+    Проверка фильтра по производителю
+  requirement: |
+    При фильтрации товаров отображаются только подходящие товары
+  prerequisites:
+    Открыта главная страница магазина
+  test-data: |
+    empty
+  steps:
+    - Выбрать производителя
+  expected-result: |
+    Отображаются товары выбранного производителя
 
 - summary: |
     Просмотр товара и подробной информации о товаре
   requirement: |
     При нажатии на товар должна открываться страница товара с подробным описанием
   prerequisites:
-    Открыта страница магазина
+    Открыта главная страница магазина
   test-data: |
     empty
   steps:
@@ -42,34 +68,22 @@
   requirement: |
     При нажатии кнопки "в корзину" товар добавляется в корзину
   prerequisites:
-    Открыта страница магазина
+    Открыта главная страница магазина
   test-data: |
     empty
   steps:
-    - На любом товаре нажать "в корзину"
-    - Нажать "корзина"
+    - Выбрать любой товар в каталоге
+    - Добавить товар в корзину
+    - Перейти в корзину
   expected-result: |
     Товар добавлен в корзину и отображается
-
-- summary: |
-    Проверка фильтра по цене
-  requirement: |
-    При фильтрации товаров отображаются только подходящие товары
-  prerequisites:
-    Открыта страница магазина
-  test-data: |
-    empty
-  steps:
-    - Выбрать цену от 500 до 10000
-  expected-result: |
-    Отображаются товары в выбранном диапазоне цены
     
 - summary: |
     Доступность сайта на различных устройствах
   requirement: |
     Сайт должен открываться на различных устройствах
   prerequisites:
-    Открыта страница магазина
+    Открыта главная страница магазина
   test-data: |
     empty
   steps:
