--- a/test-cases.yml
+++ b/test-cases.yml
@@ -23,7 +23,7 @@
     - Написать ключевое слово, например iphone
   expected-result: |
     На странице отображаются только подходящие товары
-
+    
 - summary: |
     Проверка фильтра по цене
   requirement: |
@@ -50,6 +50,77 @@
   expected-result: |
     Отображаются товары выбранного производителя
 
+- summary: |
+    Проверка фильтра по категории и цене
+  requirement: |
+    При фильтрации товаров отображаются только подходящие товары
+  prerequisites:
+    Открыта главная страница магазина
+  test-data: |
+    empty
+  steps:
+    - Выбрать производителя
+    - Выбрать диапазон цены
+  expected-result: |
+    Отображаются товары выбранного производителя и в выбранном диапазоне цены
+
+- summary: |
+    Проверка фильтра по производителю и ключевому слову
+  requirement: |
+    При фильтрации товаров отображаются только подходящие товары
+  prerequisites:
+    Открыта главная страница магазина
+  test-data: |
+    empty
+  steps:
+    - Написать ключевое слово
+    - Выбрать производителя
+  expected-result: |
+    Отображаются товары выбранного производителя и подходящие по ключевому слову
+
+- summary: |
+    Проверка фильтра по категории и производителю
+  requirement: |
+    При фильтрации товаров отображаются только подходящие товары
+  prerequisites:
+    Открыта главная страница магазина
+  test-data: |
+    empty
+  steps:
+    - Выбрать категорию
+    - Выбрать производителя
+  expected-result: |
+    Отображаются товары выбранного производителя и выбранной категории
+
+- summary: |
+    Проверка фильтра по ключевому слову и цене
+  requirement: |
+    При фильтрации товаров отображаются только подходящие товары
+  prerequisites:
+    Открыта главная страница магазина
+  test-data: |
+    empty
+  steps:
+    - Написать ключевое слово
+    - Выбрать диапазон цены
+  expected-result: |
+    Отображаются товары в выбранном диапазоне цены и подходящие под ключевое слово
+
+- summary: |
+    Проверка фильтра по категории, производителю и цене
+  requirement: |
+    При фильтрации товаров отображаются только подходящие товары
+  prerequisites:
+    Открыта главная страница магазина
+  test-data: |
+    empty
+  steps:
+    - Выбрать категорию
+    - Выбрать производителя
+    - Выбрать диапазон цены
+  expected-result: |
+    Отображаются подходящие под фильтры товары
+    
 - summary: |
     Просмотр товара и подробной информации о товаре
   requirement: |
