--- a/test-cases.yml
+++ b/test-cases.yml
@@ -3,7 +3,7 @@
   requirement: |
     При выборе определенной категории на странице должны отобразиться только товары этой категории
   prerequisites:
-    Открыта главная страница магазина
+    Открыта главная страница магазина, все фильтры сброшены
   test-data: |
     empty
   steps:
@@ -16,11 +16,11 @@
   requirement: |
     При поиске по ключевому слову на странице должны отобразиться только подходящие товары 
   prerequisites:
-    Открыта главная страница магазина
+    Открыта главная страница магазина, все фильтры сброшены
   test-data: |
     empty
   steps:
-    - Написать ключевое слово, например iphone
+    - Написать ключевое слово, например apple
   expected-result: |
     На странице отображаются только подходящие товары
     
@@ -29,8 +29,8 @@
   requirement: |
     При фильтрации товаров отображаются только подходящие товары
   prerequisites:
-    Открыта главная страница магазина
-  test-data: |
+    Открыта главная страница магазина, все фильтры сброшены
+test-data: |
     empty
   steps:
     - Выбрать цену от 500 до 10000
@@ -42,7 +42,7 @@
   requirement: |
     При фильтрации товаров отображаются только подходящие товары
   prerequisites:
-    Открыта главная страница магазина
+    Открыта главная страница магазина, все фильтры сброшены
   test-data: |
     empty
   steps:
@@ -55,7 +55,7 @@
   requirement: |
     При фильтрации товаров отображаются только подходящие товары
   prerequisites:
-    Открыта главная страница магазина
+    Открыта главная страница магазина, все фильтры сброшены
   test-data: |
     empty
   steps:
@@ -69,7 +69,7 @@
   requirement: |
     При фильтрации товаров отображаются только подходящие товары
   prerequisites:
-    Открыта главная страница магазина
+    Открыта главная страница магазина, все фильтры сброшены
   test-data: |
     empty
   steps:
@@ -83,7 +83,7 @@
   requirement: |
     При фильтрации товаров отображаются только подходящие товары
   prerequisites:
-    Открыта главная страница магазина
+    Открыта главная страница магазина, все фильтры сброшены
   test-data: |
     empty
   steps:
@@ -97,7 +97,7 @@
   requirement: |
     При фильтрации товаров отображаются только подходящие товары
   prerequisites:
-    Открыта главная страница магазина
+    Открыта главная страница магазина, все фильтры сброшены
   test-data: |
     empty
   steps:
@@ -111,7 +111,7 @@
   requirement: |
     При фильтрации товаров отображаются только подходящие товары
   prerequisites:
-    Открыта главная страница магазина
+    Открыта главная страница магазина, все фильтры сброшены
   test-data: |
     empty
   steps:
