--- a/bugreports.yml
+++ b/bugreports.yml
@@ -1,1 +1,53 @@
-
+---
+- summary: |
+    Не работает поиск товара по ключевому слову
+  environment: |
+    Google Chrome  109.0.5414.120 (Официальная сборка) (64 бит)
+    ОС Windows 7
+  steps-to-reproduce: |
+    1. Зайти на страницу https://hexlet-products-store.vercel.app/
+    2. Ввести ключевое слово
+  expected-result: |
+    На странице отображаются только подходящие товары
+  actual-result: |
+    Товары не отображаются
+- summary: |
+    Не работает фильтр по производителю и ключевому слову
+  environment: |
+    Google Chrome  109.0.5414.120 (Официальная сборка) (64 бит)
+    ОС Windows 7
+  steps-to-reproduce: |
+    1. Зайти на страницу https://hexlet-products-store.vercel.app/
+    2. Ввести ключевое слово
+    3. Выбрать производителя
+  expected-result: |
+    Отображаются товары выбранного производителя и подходящие по ключевому слову
+  actual-result: |
+    Товары не отображаются
+- summary: |
+    Не работает фильтр по ключевому слову и цене
+  environment: |
+    Google Chrome  109.0.5414.120 (Официальная сборка) (64 бит)
+    ОС Windows 7
+  steps-to-reproduce: |
+    1. Зайти на страницу https://hexlet-products-store.vercel.app/
+    2. Ввести ключевое слово
+    3. Выбрать диапазон цены
+  expected-result: >
+    Отображаются товары в выбранном диапазоне цены и подходящие под
+    ключевое слово
+  actual-result: |
+    Товары не отображаются
+- summary: |
+    Не работает фильтр по производителю и ключевому слову
+  environment: |
+    Google Chrome  109.0.5414.120 (Официальная сборка) (64 бит)
+    ОС Windows 7
+  steps-to-reproduce: |
+    1. Зайти на страницу https://hexlet-products-store.vercel.app/
+    2. Ввести ключевое слово
+    3. Выбрать производителя
+  expected-result: |
+    Отображаются товары выбранного производителя и подходящие по ключевому слову
+  actual-result: |
+    Товары не отображаются 
