--- a/bugreports.yml
+++ b/bugreports.yml
@@ -11,6 +11,7 @@
     На странице отображаются только подходящие товары
   actual-result: |
     Товары не отображаются
+    Ошибка изображена на скриншоте screen1.png
     
 - summary: |
     Не работает фильтр по производителю и ключевому слову
@@ -25,6 +26,7 @@
     Отображаются товары выбранного производителя и подходящие по ключевому слову
   actual-result: |
     Товары не отображаются
+    Ошибка изображена на скриншоте screen2.png
     
 - summary: |
     Не работает фильтр по ключевому слову и цене
@@ -40,3 +42,4 @@
     ключевое слово
   actual-result: |
     Товары не отображаются
+    Ошибка изображена на скриншоте screen3.png
