--- a/regress-report.yml
+++ b/regress-report.yml
@@ -51,14 +51,48 @@
     Доступность сайта на различных устройствах
   status: pass
 
-bugreports:
-  - summary: |
-      Короткое описание ошибки
-    environment: |
-      Ссылка на билд/коммит/версия ПО и всего окружения
-    steps-to-reproduce: |
-      Полный перечень шагов для воспроизведения и описание, на каком шаге произошла ошибка
-    expected-result: |
-      Какой результат должен был быть без ошибки
-    actual-result: |
-      Какой результат получился на самом деле
+  bugreports:
+- summary: |
+    Не работает поиск товара по ключевому слову
+  environment: |
+    Google Chrome  109.0.5414.120 (Официальная сборка) (64 бит)
+    ОС Windows 7
+  steps-to-reproduce: |
+    1. Зайти на страницу https://hexlet-products-store.vercel.app/
+    2. Ввести ключевое слово
+  expected-result: |
+    На странице отображаются только подходящие товары
+  actual-result: |
+    Отображается весь каталог товаров
+    Ошибка изображена на скриншоте screen4.png
+
+- summary: |
+    Не работает фильтр по производителю и ключевому слову
+  environment: |
+    Google Chrome  109.0.5414.120 (Официальная сборка) (64 бит)
+    ОС Windows 7
+  steps-to-reproduce: |
+    1. Зайти на страницу https://hexlet-products-store.vercel.app/
+    2. Ввести ключевое слово
+    3. Выбрать производителя
+  expected-result: |
+    Отображаются товары выбранного производителя и подходящие по ключевому слову
+  actual-result: |
+    Отображается весь каталог товаров
+    Ошибка изображена на скриншоте screen5.png
+    
+- summary: |
+    Не работает фильтр по ключевому слову и цене
+  environment: |
+    Google Chrome  109.0.5414.120 (Официальная сборка) (64 бит)
+    ОС Windows 7
+  steps-to-reproduce: |
+    1. Зайти на страницу https://hexlet-products-store.vercel.app/
+    2. Ввести ключевое слово
+    3. Выбрать диапазон цены
+  expected-result: >
+    Отображаются товары в выбранном диапазоне цены и подходящие под
+    ключевое слово
+  actual-result: |
+    Отображается весь каталог товаров
+    Ошибка изображена на скриншоте screen6.png
