--- a/test-cases.yml
+++ b/test-cases.yml
@@ -148,6 +148,22 @@ expected-result: |
     - Перейти в корзину
   expected-result: |
     Товар добавлен в корзину и отображается
+
+- summary: |
+    Успешное оформление заказа
+  requirement: |
+    Заказ успешно оформлен
+  prerequisites:
+    Открыта главная страница магазина
+  test-data: |
+    empty
+  steps:
+    - Выбрать любой товар в каталоге
+    - Добавить товар в корзину
+    - Перейти в корзину
+    - Нажать "Оформить заказ"
+  expected-result: |
+    Заказ успешно оформлен и сервер ответил 200 
     
 - summary: |
     Доступность сайта на различных устройствах
