--- a/testing-report.yml
+++ b/testing-report.yml
@@ -46,6 +46,10 @@
 - summary: |
     Добавление товара в корзину и просмотр содержимого корзины
   status: pass
+  
+- summary: |
+    Успешное оформление заказа
+  status: fail
 
 - summary: |
     Доступность сайта на различных устройствах
