--- a/test-cases.yml
+++ b/test-cases.yml
@@ -163,7 +163,7 @@ expected-result: |
     - Перейти в корзину
     - Нажать "Оформить заказ"
   expected-result: |
-    Заказ успешно оформлен и сервер ответил 200 
+    Заказ успешно оформлен и сервер ответил 200 ОК
     
 - summary: |
     Доступность сайта на различных устройствах
