--- a/bugreports.yml
+++ b/bugreports.yml
@@ -43,3 +43,19 @@
   actual-result: |
     Товары не отображаются
     Ошибка изображена на скриншоте screen3.png
+
+- summary: |
+    Сервер отвечает 500
+  environment: |
+    Google Chrome  109.0.5414.120 (Официальная сборка) (64 бит)
+    ОС Windows 7
+  steps-to-reproduce: |
+    1. Выбрать любой товар в каталоге
+    2. Добавить товар в корзину
+    3. Перейти в корзину
+    4. Нажать "Оформить заказ"
+  expected-result: >
+    Заказ успешно оформлен и сервер ответил 200 ОК
+  actual-result: |
+    Сервер ответил 500
+    Ошибка изображена на скриншоте screen4.png
