--- a/test-cases.yml
+++ b/test-cases.yml
@@ -32,8 +32,8 @@
     Открыта главная страница магазина, все фильтры сброшены
 test-data: |
     empty
-steps:
-    - Выбрать цену от 500 до 10000
+steps: | 
+    - Выбрать диапазон цены 
 expected-result: |
     Отображаются товары в выбранном диапазоне цены
 
