--- a/regress-report.yml
+++ b/regress-report.yml
@@ -48,6 +48,10 @@
   status: pass
 
 - summary: |
+    Успешное оформление заказа
+  status: fail
+
+- summary: |
     Доступность сайта на различных устройствах
   status: pass
 
@@ -64,7 +68,7 @@
     На странице отображаются только подходящие товары
   actual-result: |
     Отображается весь каталог товаров
-    Ошибка изображена на скриншоте screen4.png
+    Ошибка изображена на скриншоте screen5.png
     
 - summary: |
     Не работает фильтр по производителю и ключевому слову
@@ -79,7 +83,7 @@
     Отображаются товары выбранного производителя и подходящие по ключевому слову
   actual-result: |
     Отображается весь каталог товаров
-    Ошибка изображена на скриншоте screen5.png
+    Ошибка изображена на скриншоте screen6.png
     
 - summary: |
     Не работает фильтр по ключевому слову и цене
@@ -95,4 +99,38 @@
     ключевое слово
   actual-result: |
     Отображается весь каталог товаров
-    Ошибка изображена на скриншоте screen6.png
+    Ошибка изображена на скриншоте screen7.png
+
+- summary: |
+    Не работает фильтр по ключевому слову и цене
+  environment: |
+    Google Chrome  109.0.5414.120 (Официальная сборка) (64 бит)
+    ОС Windows 7
+  steps-to-reproduce: |
+    1. Зайти на страницу https://hexlet-products-store.vercel.app/
+    2. Ввести ключевое слово
+    3. Выбрать диапазон цены
+  expected-result: >
+    Отображаются товары в выбранном диапазоне цены и подходящие под
+    ключевое слово
+  actual-result: |
+    Отображается весь каталог товаров
+    Ошибка изображена на скриншоте screen7.png
+
+- summary: |
+    Сервер отвечает 500
+  environment: |
+    Google Chrome  109.0.5414.120 (Официальная сборка) (64 бит)
+    ОС Windows 7
+  steps-to-reproduce: |
+    1. Выбрать любой товар в каталоге
+    2. Добавить товар в корзину
+    3. Перейти в корзину
+    4. Нажать "Оформить заказ"
+  expected-result: >
+    Заказ успешно оформлен и сервер ответил 200 ОК
+  actual-result: |
+    Сервер ответил 500
+    Ошибка изображена на скриншоте screen8.png
+
+    
