--- a/regress-report.yml
+++ b/regress-report.yml
@@ -1,114 +1,115 @@
 ---
-- summary: |
-    Поиск товаров по категории
-  status: pass
+test-cases:
+    - summary: |
+        Поиск товаров по категории
+      status: pass
 
-- summary: |
-    Поиск товара по ключевому слову
-  status: fail
+    - summary: |
+        Поиск товара по ключевому слову
+      status: fail
 
-- summary: |
-    Проверка фильтра по цене
-  status: pass
+    - summary: |
+        Проверка фильтра по цене
+      status: pass
 
-- summary: |
-    Проверка фильтра по производителю
-  status: pass
+    - summary: |
+        Проверка фильтра по производителю
+      status: pass
 
-- summary: |
-    Проверка фильтра по категории и цене
-  status: pass
+    - summary: |
+        Проверка фильтра по категории и цене
+      status: pass
 
-- summary: |
-    Проверка фильтра по производителю и ключевому слову
-  status: fail
+    - summary: |
+        Проверка фильтра по производителю и ключевому слову
+      status: fail
 
-- summary: |
-    Проверка фильтра по категории и производителю
-  status: pass
+    - summary: |
+        Проверка фильтра по категории и производителю
+      status: pass
 
-- summary: |
-    Проверка фильтра по ключевому слову и цене
-  status: fail
+    - summary: |
+        Проверка фильтра по ключевому слову и цене
+      status: fail
 
-- summary: |
-    Проверка фильтра по категории, производителю и цене
-  status: pass
+    - summary: |
+        Проверка фильтра по категории, производителю и цене
+      status: pass
 
-- summary: |
-    Просмотр товара и подробной информации о товаре
-  status: pass
+    - summary: |
+        Просмотр товара и подробной информации о товаре
+      status: pass
 
-- summary: |
-    Добавление товара в корзину и просмотр содержимого корзины
-  status: pass
+    - summary: |
+        Добавление товара в корзину и просмотр содержимого корзины
+      status: pass
 
 - summary: |
     Успешное оформление заказа
   status: fail
 
-- summary: |
-    Доступность сайта на различных устройствах
-  status: pass
+    - summary: |
+        Доступность сайта на различных устройствах
+      status: pass
 
-  bugreports:
-- summary: |
-    Не работает поиск товара по ключевому слову
-  environment: |
-    Google Chrome  109.0.5414.120 (Официальная сборка) (64 бит)
-    ОС Windows 7
-  steps-to-reproduce: |
-    1. Зайти на страницу https://hexlet-products-store.vercel.app/
-    2. Ввести ключевое слово
-  expected-result: |
-    На странице отображаются только подходящие товары
-  actual-result: |
-    Отображается весь каталог товаров
-    Ошибка изображена на скриншоте screen5.png
+bugreports:
+    - summary: |
+        Не работает поиск товара по ключевому слову
+    environment: |
+        Google Chrome  109.0.5414.120 (Официальная сборка) (64 бит)
+        ОС Windows 7
+      steps-to-reproduce: |
+        1. Зайти на страницу https://hexlet-products-store.vercel.app/
+        2. Ввести ключевое слово
+      expected-result: |
+        На странице отображаются только подходящие товары
+      actual-result: |
+        Отображается весь каталог товаров
+        Ошибка изображена на скриншоте screen5.png
     
-- summary: |
-    Не работает фильтр по производителю и ключевому слову
-  environment: |
-    Google Chrome  109.0.5414.120 (Официальная сборка) (64 бит)
-    ОС Windows 7
-  steps-to-reproduce: |
-    1. Зайти на страницу https://hexlet-products-store.vercel.app/
-    2. Ввести ключевое слово
-    3. Выбрать производителя
-  expected-result: |
-    Отображаются товары выбранного производителя и подходящие по ключевому слову
-  actual-result: |
-    Отображается весь каталог товаров
-    Ошибка изображена на скриншоте screen6.png
+    - summary: |
+        Не работает фильтр по производителю и ключевому слову
+      environment: |
+        Google Chrome  109.0.5414.120 (Официальная сборка) (64 бит)
+        ОС Windows 7
+      steps-to-reproduce: |
+        1. Зайти на страницу https://hexlet-products-store.vercel.app/
+        2. Ввести ключевое слово
+        3. Выбрать производителя
+      expected-result: |
+        Отображаются товары выбранного производителя и подходящие по ключевому слову
+      actual-result: |
+        Отображается весь каталог товаров
+        Ошибка изображена на скриншоте screen6.png
     
-- summary: |
-    Не работает фильтр по ключевому слову и цене
-  environment: |
-    Google Chrome  109.0.5414.120 (Официальная сборка) (64 бит)
-    ОС Windows 7
-  steps-to-reproduce: |
-    1. Зайти на страницу https://hexlet-products-store.vercel.app/
-    2. Ввести ключевое слово
-    3. Выбрать диапазон цены
-  expected-result: >
-    Отображаются товары в выбранном диапазоне цены и подходящие под
-    ключевое слово
-  actual-result: |
-    Отображается весь каталог товаров
-    Ошибка изображена на скриншоте screen7.png
+    - summary: |
+        Не работает фильтр по ключевому слову и цене
+      environment: |
+        Google Chrome  109.0.5414.120 (Официальная сборка) (64 бит)
+        ОС Windows 7
+      steps-to-reproduce: |
+        1. Зайти на страницу https://hexlet-products-store.vercel.app/
+        2. Ввести ключевое слово
+        3. Выбрать диапазон цены
+      expected-result: >
+        Отображаются товары в выбранном диапазоне цены и подходящие под
+        ключевое слово
+      actual-result: |
+        Отображается весь каталог товаров
+        Ошибка изображена на скриншоте screen7.png
 
-- summary: |
-    Сервер отвечает 500
-  environment: |
-    Google Chrome  109.0.5414.120 (Официальная сборка) (64 бит)
-    ОС Windows 7
-  steps-to-reproduce: |
-    1. Выбрать любой товар в каталоге
-    2. Добавить товар в корзину
-    3. Перейти в корзину
-    4. Нажать "Оформить заказ"
-  expected-result: >
-    Заказ успешно оформлен и сервер ответил 200 ОК
-  actual-result: |
-    Сервер ответил 500
-    Ошибка изображена на скриншоте screen8.png
+    - summary: |
+        Сервер отвечает 500
+      environment: |
+        Google Chrome  109.0.5414.120 (Официальная сборка) (64 бит)
+        ОС Windows 7
+      steps-to-reproduce: |
+        1. Выбрать любой товар в каталоге
+        2. Добавить товар в корзину
+        3. Перейти в корзину
+        4. Нажать "Оформить заказ"
+      expected-result: >
+        Заказ успешно оформлен и сервер ответил 200 ОК
+      actual-result: |
+        Сервер ответил 500
+        Ошибка изображена на скриншоте screen8.png
