--- a/test-cases.yml
+++ b/test-cases.yml
@@ -25,15 +25,15 @@
     На странице отображаются только подходящие товары
     
 - summary: |
-    Проверка фильтра по цене
+    Поиск товара по цене
   requirement: |
-    При фильтрации товаров отображаются только подходящие товары
+    При фильтрации товаров отображаются только подходящие товары 
   prerequisites:
     Открыта главная страница магазина, все фильтры сброшены
   test-data: |
     empty
   steps:
-    - Выбрать диапазон цены 
+    - Выбрать диапазон цены
   expected-result: |
     Отображаются товары в выбранном диапазоне цены
 
