--- a/test-cases.yml
+++ b/test-cases.yml
@@ -25,9 +25,9 @@
     На странице отображаются только подходящие товары
     
 - summary: |
-    Поиск товара по цене
+    Проверка фильтра по цене
   requirement: |
-    При фильтрации товаров отображаются только подходящие товары 
+    При фильтрации товаров отображаются только подходящие товары
   prerequisites:
     Открыта главная страница магазина, все фильтры сброшены
   test-data: |
