--- a/test-cases.yml
+++ b/test-cases.yml
@@ -23,6 +23,19 @@
     - Написать ключевое слово, например apple
   expected-result: |
     На странице отображаются только подходящие товары
+
+    - summary: |
+    Проверка фильтра по цене
+  requirement: |
+    При фильтрации товаров отображаются только подходящие товары
+  prerequisites:
+    Открыта главная страница магазина, все фильтры сброшены
+  test-data: |
+    empty
+  steps:
+    - Выбрать диапазон цены от 50 до 2000
+  expected-result: |
+    Отображаются товары в выбранном диапазоне цены
     
 - summary: |
     Проверка фильтра по производителю
