--- a/test-cases.yml
+++ b/test-cases.yml
@@ -135,9 +135,53 @@
     Открылась страница с товаром и подробным описанием
 
 - summary: |
-    Добавление товара в корзину и просмотр содержимого корзины
+    Успешное добавление товара в корзину
   requirement: |
     При нажатии кнопки "в корзину" товар добавляется в корзину
+  prerequisites:
+    Открыта главная страница магазина
+  test-data: |
+    empty
+  steps:
+    - Выбрать любой товар в каталоге
+    - Добавить товар в корзину
+    - Перейти в корзину
+  expected-result: |
+    Товар успешно добавлен в корзину
+
+- summary: |
+    Успешное удаление товара из корзины
+  requirement: |
+    При нажатии кнопки "в корзину" товар добавляется в корзину
+  prerequisites:
+    Открыта главная страница магазина
+  test-data: |
+    empty
+  steps:
+    - Перейти в корзину
+    - Выбрать любой товар
+    - Нажать "удалить"
+  expected-result: |
+    Товар успешно удалён из корзины
+
+- summary: |
+    Успешная очистка корзины
+  requirement: |
+    При нажатии кнопки "очистить корзину" все товары удалаются
+  prerequisites:
+    Открыта главная страница магазина
+  test-data: |
+    empty
+  steps:
+    - Перейти в корзину
+    - Нажать "очистить корзину"
+  expected-result: |
+    Все товары успешно удалены
+    
+- summary: |
+    Добавление товара в корзину и просмотр содержимого корзины
+  requirement: |
+    При нажатии кнопки "в корзину" товар добавляется в корзину и отображается
   prerequisites:
     Открыта главная страница магазина
   test-data: |
@@ -164,18 +208,44 @@
     - Нажать "Оформить заказ"
   expected-result: |
     Заказ успешно оформлен и сервер ответил 200 ОК
-    
+
 - summary: |
-    Доступность сайта на различных устройствах
+    Успешная локализация сайта на русский язык
   requirement: |
-    Сайт должен открываться на различных устройствах
+    Сайт успешно отображается на выбранном языке
+  prerequisites:
+    Открыта главная страница магазина на английском языке
+  test-data: |
+    empty
+  steps:
+    - Нажать "language"
+    - Выбрать русский язык
+  expected-result: |
+    Сайт упешно локализован на русский язык
+
+- summary: |
+    Успешная локализация сайта на английский язык
+  requirement: |
+    Сайт успешно отображается на выбранном языке
+  prerequisites:
+    Открыта главная страница магазина на русском языке
+  test-data: |
+    empty
+  steps:
+    - Нажать "language"
+    - Выбрать английский язык
+  expected-result: |
+    Сайт упешно локализован на английский язык
+
+- summary: |
+    Успешное переключение страниц каталога
+  requirement: |
+    При нажатии кнопки "следующая" открывается новая страница каталога
   prerequisites:
     Открыта главная страница магазина
   test-data: |
     empty
   steps:
-    - Открыть DevTools
-    - Открыть меню адаптивности
-    - Выбрать девайс
+    - Нажать "следующая"
   expected-result: |
-    Сайт открывается на различных устройствах
+    Открывается новая страница каталога
