--- a/testing-report.yml
+++ b/testing-report.yml
@@ -40,6 +40,18 @@
   status: pass
   
 - summary: |
+    Успешное добавление товара в корзину
+  status: pass
+
+- summary: |
+    Успешное удаление товара из корзины
+  status: pass
+
+- summary: |
+    Успешная очистка корзины
+  status: pass
+  
+- summary: |
     Добавление товара в корзину и просмотр содержимого корзины
   status: pass
 
@@ -48,5 +60,13 @@
   status: fail
   
 - summary: |
-    Доступность сайта на различных устройствах
+    Успешная локализация сайта на русский язык
   status: pass
+
+- summary: |
+    Успешная локализация сайта на английский язык
+  status: pass
+
+- summary: |
+    Успешное переключение страниц каталога
+  status: fail
