--- a/bugreports.yml
+++ b/bugreports.yml
@@ -1,6 +1,6 @@
 ---
 - summary: |
-    Не работает поиск товара по ключевому слову
+    Не работает поиск товара по ключевому слову "apple"
   environment: |
     Google Chrome  109.0.5414.120 (Официальная сборка) (64 бит)
     ОС Windows 7
@@ -12,38 +12,8 @@
   actual-result: |
     Товары не отображаются
     Ошибка изображена на скриншоте screen1.png
+    Подходящие товары присутствуют в каталоге screen2.png
     
-- summary: |
-    Не работает фильтр по производителю и ключевому слову
-  environment: |
-    Google Chrome  109.0.5414.120 (Официальная сборка) (64 бит)
-    ОС Windows 7
-  steps-to-reproduce: |
-    1. Зайти на страницу https://hexlet-products-store.vercel.app/
-    2. Ввести ключевое слово
-    3. Выбрать производителя
-  expected-result: |
-    Отображаются товары выбранного производителя и подходящие по ключевому слову
-  actual-result: |
-    Товары не отображаются
-    Ошибка изображена на скриншоте screen2.png
-    
-- summary: |
-    Не работает фильтр по ключевому слову и цене
-  environment: |
-    Google Chrome  109.0.5414.120 (Официальная сборка) (64 бит)
-    ОС Windows 7
-  steps-to-reproduce: |
-    1. Зайти на страницу https://hexlet-products-store.vercel.app/
-    2. Ввести ключевое слово
-    3. Выбрать диапазон цены
-  expected-result: >
-    Отображаются товары в выбранном диапазоне цены и подходящие под
-    ключевое слово
-  actual-result: |
-    Товары не отображаются
-    Ошибка изображена на скриншоте screen3.png
-
 - summary: |
     Сервер отвечает 500
   environment: |
@@ -59,3 +29,17 @@
   actual-result: |
     Сервер ответил 500
     Ошибка изображена на скриншоте screen4.png
+
+- summary: |
+    При переключении страниц каталога меняются списки категорий и призводителей
+  environment: |
+    Google Chrome  109.0.5414.120 (Официальная сборка) (64 бит)
+    ОС Windows 7
+  steps-to-reproduce: |
+    1. Нажать "Категория"
+    2. Нажать "Следующая"
+  expected-result: >
+    Открывается новая страница каталога без изменения категорий и производителей
+  actual-result: |
+    Разные списки категорий и производителей на разных страницах каталога
+    Ошибка изображена на скриншотах screen3.png и screen3.1.png
