--- a/regress-report.yml
+++ b/regress-report.yml
@@ -41,71 +41,35 @@ test-cases:
       status: pass
 
     - summary: |
+        Успешное добавление товара в корзину
+      status: pass
+
+    - summary: |
+        Успешное удаление товара из корзины
+      status: pass
+
+    - summary: |
+        Успешная очистка корзины
+      status: pass
+  
+    - summary: |
         Добавление товара в корзину и просмотр содержимого корзины
       status: pass
-      
+
     - summary: |
-        Доступность сайта на различных устройствах
+        Успешное оформление заказа
+      status: fail
+  
+    - summary: |
+        Успешная локализация сайта на русский язык
       status: pass
 
-bugreports:
     - summary: |
-        Не работает поиск товара по ключевому слову
-      environment: |
-        Google Chrome  109.0.5414.120 (Официальная сборка) (64 бит)
-        ОС Windows 7
-      steps-to-reproduce: |
-        1. Зайти на страницу https://hexlet-products-store.vercel.app/
-        2. Ввести ключевое слово
-      expected-result: |
-        На странице отображаются только подходящие товары
-      actual-result: |
-        Отображается весь каталог товаров
-        Ошибка изображена на скриншоте screen5.png
-    
-    - summary: |
-        Не работает фильтр по производителю и ключевому слову
-      environment: |
-        Google Chrome  109.0.5414.120 (Официальная сборка) (64 бит)
-        ОС Windows 7
-      steps-to-reproduce: |
-        1. Зайти на страницу https://hexlet-products-store.vercel.app/
-        2. Ввести ключевое слово
-        3. Выбрать производителя
-      expected-result: |
-        Отображаются товары выбранного производителя и подходящие по ключевому слову
-      actual-result: |
-        Отображается весь каталог товаров
-        Ошибка изображена на скриншоте screen6.png
-    
-    - summary: |
-        Не работает фильтр по ключевому слову и цене
-      environment: |
-        Google Chrome  109.0.5414.120 (Официальная сборка) (64 бит)
-        ОС Windows 7
-      steps-to-reproduce: |
-        1. Зайти на страницу https://hexlet-products-store.vercel.app/
-        2. Ввести ключевое слово
-        3. Выбрать диапазон цены
-      expected-result: >
-        Отображаются товары в выбранном диапазоне цены и подходящие под
-        ключевое слово
-      actual-result: |
-        Отображается весь каталог товаров
-        Ошибка изображена на скриншоте screen7.png
+        Успешная локализация сайта на английский язык
+      status: pass
 
     - summary: |
-        Сервер отвечает 500
-      environment: |
-        Google Chrome  109.0.5414.120 (Официальная сборка) (64 бит)
-        ОС Windows 7
-      steps-to-reproduce: |
-        1. Выбрать любой товар в каталоге
-        2. Добавить товар в корзину
-        3. Перейти в корзину
-        4. Нажать "Оформить заказ"
-      expected-result: >
-        Заказ успешно оформлен и сервер ответил 200 ОК
-      actual-result: |
-        Сервер ответил 500
-        Ошибка изображена на скриншоте screen8.png
+        Успешное переключение страниц каталога
+      status: pass
+
+bugreports: []
