--- a/regress-report.yml
+++ b/regress-report.yml
@@ -85,3 +85,4 @@ bugreports:
       Кнопка переключения страниц на месте
     actual-result: |
       Пропала кнопка переключения страниц 
+      Ошибка изображена на скриншоте screen5.png
