--- a/test-cases.yml
+++ b/test-cases.yml
@@ -158,6 +158,8 @@
   test-data: |
     empty
   steps:
+    - Выбрать любой товар в каталоге
+    - Добавить товар в корзину
     - Перейти в корзину
     - Выбрать любой товар
     - Нажать "удалить"
@@ -173,6 +175,8 @@
   test-data: |
     empty
   steps:
+    - Выбрать любой товар в каталоге
+    - Добавить товар в корзину
     - Перейти в корзину
     - Нажать "очистить корзину"
   expected-result: |
