--- a/bugreports.yml
+++ b/bugreports.yml
@@ -31,7 +31,7 @@
     Ошибка изображена на скриншоте screen4.png
 
 - summary: |
-    При переключении страниц каталога меняются списки категорий и призводителей
+    При переключении страниц каталога меняются списки категорий и производителей
   environment: |
     Google Chrome  109.0.5414.120 (Официальная сборка) (64 бит)
     ОС Windows 7
@@ -43,3 +43,30 @@
   actual-result: |
     Разные списки категорий и производителей на разных страницах каталога
     Ошибка изображена на скриншотах screen3.png и screen3.1.png
+
+- summary: |
+    При переключении языка отсутствует картинка флага 
+  environment: |
+    Google Chrome  109.0.5414.120 (Официальная сборка) (64 бит)
+    ОС Windows 7
+  steps-to-reproduce: |
+    1. Нажать "language"
+  expected-result: >
+    В выпадающем списке у каждой страны стоит картинка с флагом
+  actual-result: |
+    У английского языка отсутствует картинка флага
+    Ошибка изображена на скриншоте screen6.png
+
+- summary: |
+    Описание товаров не локализовано на русский язык 
+  environment: |
+    Google Chrome  109.0.5414.120 (Официальная сборка) (64 бит)
+    ОС Windows 7
+  steps-to-reproduce: |
+    1. Нажать "language"
+    2. Выбрать русский язык
+  expected-result: >
+    Сайт успешно отображается на выбранном языке
+  actual-result: |
+    Описание товаров не локализовано на русский язык
+    Ошибка изображена на скриншоте screen7.png
