--- a/bugreports.yml
+++ b/bugreports.yml
@@ -45,7 +45,7 @@
     Ошибка изображена на скриншотах screen3.png и screen3.1.png
 
 - summary: |
-    При переключении языка отсутствует картинка флага 
+    Не отображается картинка флага в меню языков 
   environment: |
     Google Chrome  109.0.5414.120 (Официальная сборка) (64 бит)
     ОС Windows 7
