--- a/bugreports.yml
+++ b/bugreports.yml
@@ -54,7 +54,7 @@
   expected-result: >
     В выпадающем списке у каждой страны стоит картинка с флагом
   actual-result: |
-    У английского языка отсутствует картинка флага
+    У английского языка не отображается картинка флага
     Ошибка изображена на скриншоте screen6.png
 
 - summary: |
